src/App.css
body {
  background-color: rgb(0, 0, 0);
  color: white;
  font-family: 'DM Sans', 'Open Sans', sans-serif;
  padding: 0;
  margin: 0 auto; 
  letter-spacing: 0.1rem;
  margin-left: 20%;
  margin-right: 20%;
  font-size: 1rem;
  box-sizing: border-box;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.modal {
  display: none; 
  position: fixed;
  z-index: 1000;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 35rem;
  background: rgb(41, 41, 41);
  padding: 20px;
  text-align: center;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
}
.modal-content {
  position: relative;
}
.close {
  position: absolute;
  top: 5px;
  right: 10px;
  font-size: 20px;
  cursor: pointer;
}


.navbar {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  height: 80px;
  width: 100%;

  background:transparent;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(10px);
  z-index: 1000;
}

.navbar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  overflow: hidden;
  max-width: 100%;
  box-sizing: border-box;
  
}

.navbar-logo {
  font-size: 2rem;
  font-weight: bold;
  color: white;
  text-decoration: none;
  cursor:pointer;
}

.navbar-container .navbar-menu {
  display: flex;
  text-align: center;
  list-style: none;
}

.navbar-container .navbar-menu li a{
  text-decoration: none;
  color: white;
  font-size: 1.3rem;
  font-weight: 500;
  padding: 3px 20px;
  border-radius: 20px;
  border: 2px solid transparent;
  transition: all 0.3s ease;
  white-space:nowrap;
}

.navbar-container .navbar-menu li a:hover,
.navbar-container .navbar-menu li a.active {
  color: black;
  background-color: rgb(255, 255, 255);
  border: 2px solid white;
}

.navbar-toggle {
  display: none;
  background: transparent;
  padding: 10px;
  border: none;
  cursor: pointer;
}

.bar{
  display:block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  background-color: white;
  transition: all 0.3 ease-in-out;
   
}
.about-me {
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  gap: 1rem;
  border-radius: 8px;
  width: 100%;
  margin: 0 auto;
  padding-top: 2rem;
}

.about-me-text {
  margin-top: 1rem;
}

.photo {
  display: flex;
  max-width: 5rem;
  border-radius: 10%;
  margin: 0 auto;
  background-color: white;
}

.social-links {
  margin-top: 0.5rem;
}

.github-link, .linkedin-link {
  text-decoration: none;
  font-weight: bold;
}

.github-link {
  color: rgb(255, 255, 255);
  padding-right: 1rem;
}

.linkedin-link {
  color: rgb(67, 133, 255);
}

.wrapping {
  padding-top: 1rem;
  display: flex;
  flex-direction: column;
  margin: auto;
  width: 50rem;
  max-width: 100%;
}

.main-wrapping {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0;
  padding: 0;
  padding-top: 2rem;
  padding-bottom: 0.5rem;
  min-width: 350px;
}

.main-wrapping h2 {
  display: block;
  margin: 0;
  padding: 0;
  font-size: 1.4rem;
  color: rgb(255, 255, 255);
  text-align: center;
  justify-content: center;
  align-items: center;
}

.view-more {
  margin-top: 0.1rem;
}
.view-more a {
  display: block;
  color: rgb(255, 255, 255);
  text-decoration: none;
  font-size: 0.8rem;
  text-transform: uppercase;
  background-color: rgb(41, 41, 41);
  border-radius: 10px;
  padding: 0.4rem 1rem;
  transition: background-color 0.2s ease;
}

.view-more a:hover {
  background-color: rgb(116, 116, 116);
}

.card-wrapping {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 10px;
  width: 100%;
  height: 150px;
}

.card {
  padding-top: 10px;
  padding-left: 0.8rem;
  border: 1px solid rgb(56, 56, 56);
  border-radius: 10px;
  background-color: rgb(31, 31, 31);
  text-decoration: none;
  color: white;
  font-size: 0.8rem;
  transition: background-color 0.2s ease;
}

.cardmodal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: none;
  justify-content: center;
  align-items: center;
}

.project-wrapping {
  display: flex;
  flex-direction: column;
  margin: auto;
  width: 50rem;
  height: 5rem;
  max-width: 100%;
}

/* Show modal when targeted */
#project-one:target {
  display: flex;
}

#project-two:target {
  display: flex;
}

/* Modal content */
.modal-content {
  background: rgb(51, 51, 51);
  padding: 10rem;
  max-width: 80%;
  border-radius: 10px;
  text-align: center;
  color: rgb(255, 255, 255);
}

/* Close button */
.close {
  display: inline-block;
  margin-top: 10px;
  padding: 5px 10px;
  background: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  text-decoration: none;
  border-radius: 5px;
}

.card:hover {
  background-color: rgb(116, 116, 116);
}

.copyright {
  padding-top: 150px;
  display: flex;
  flex-direction: column;
  margin-top:auto;
  width: 50rem;
  max-width: 100%;
}

.copyright-text{
  cursor: pointer;
}

.main-text{
  margin: auto;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.contact-text {
  margin: auto;
}

.contact-form{
  background-color: rgb(31, 31, 31);
  width: 100%;
  margin: auto;
  border-radius: 10px;
  margin-top: 2rem;
}

.input-group {
  display: flex;
  flex-direction: column;
  margin: 2rem;
}

input[type=text], [type=email], select {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid rgb(83, 83, 83);
  border-radius: 4px;
  box-sizing: border-box;
  background-color: rgb(31, 31, 31);
  color: white;
  font-size: 1rem;
}

textarea {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid rgb(83, 83, 83);
  border-radius: 4px;
  box-sizing: border-box;
  background-color: rgb(31, 31, 31);
  height: 15rem;
  color: white;
  font-size: 1rem;
  font-family: inherit;
  max-width: 100%;
}

.submit-btn {
  background-color: #636363;
  border: none;
  border-radius: 4px;
  color: white;
  padding: 1rem;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1.2rem;
  cursor: pointer;

}

.portfolio-image {
  border: 2px solid white;
  border-radius: 10px;
  margin-top: 1rem;
}

.project-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
  gap: 10px;
  width: 100%;
  flex-grow: 1;
  height: 150px;
  border: 2px solid white;
}

.project-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 7rem;
  padding-bottom: 1rem;
}

@media (max-width: 1305px) {
  
  .navbar-container {
      font-size: 1.2rem;
      padding: 0rem;
  }

  .navbar-logo {
      padding-right: 0.5rem;
  }
}

@media (max-width: 1175px) {
  .navbar-container {
      padding: 0rem;
  }

  .navbar-logo {
      font-size: 1.7rem;
      text-align: center;
  }

  .navbar-container {
    gap: 1rem;
  }

  .navbar-menu {
    gap: 0.5rem;
  }

  .navbar-container .navbar-menu li a {
      font-size: 1.2rem;
      padding: 3px 15px;
  }
}

@media (max-width: 1085px) {

  .navbar-logo {
      font-size: 1.7rem;
      padding-right: 0.5rem;
  }

  .navbar-container .navbar-menu li a {
      font-size: 1rem;
  }
}



@media (max-width: 960px) {
  .navbar{
      backdrop-filter: none;
  }

  .navbar-container {
      padding: 0;
      min-width: 100%;
  }

  .navbar-container .navbar-menu{
      display: none;
      flex-direction: column;
      align-items: flex-start;
      gap: 1.7rem;
      position: fixed;
      height: 100vh;
      width: 250px;
      top: 0;
      right: 0;
      padding: 5rem 1.5rem;
      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
      backdrop-filter: blur(10px);
  }

  @media (max-width: 580px) {
      .view-more {
          display: none;
      }

      h1 {
          font-size: 1rem;
      }
    
  }

  .navbar-toggle {
      display: block;
      z-index: 1000;
  }

  .navbar-toggle.active .bar:nth-child(2) {
      opacity:0;
  }

  .navbar-toggle.active .bar:nth-child(1) {
      transform: translateY(8px) rotate(45deg);
  }

  .navbar-toggle.active .bar:nth-child(3) {
      transform: translateY(-8px) rotate(-45deg);
  }

  .navbar-container .navbar-menu.active {
      display: flex;
  }

  .name {
      font-size: 0.8rem;
  }
}

@media (max-width: 480px) {
  .navbar-container {
      padding: 0;
  }
  
  .navbar-logo    {
      font-size: 1.7rem;
  }

  .navbar-container .navbar-menu li a {
      font-size: 1.2rem;
      padding: 3px 15px;
  }
}

